// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots default as links 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div
          data-css-uxkdi0=""
          onKeyDown={[Function]}
          role="tablist"
          tabIndex="0"
        >
          <div
            data-css-1mwad1w=""
            style={
              Object {
                "transform": "translateX(0px)",
              }
            }
          >
            <a
              aria-selected={true}
              data-css-xljr51=""
              href="https://duckduckgo.com"
              id={1}
              onClick={[Function]}
              role="tab"
              tabIndex="-1"
            >
              <div
                data-css-sgoz4b=""
                tabIndex="-1"
              >
                External link
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots default default 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div>
          <div
            data-css-uxkdi0=""
            onKeyDown={[Function]}
            role="tablist"
            tabIndex="0"
          >
            <div
              data-css-1mwad1w=""
              style={
                Object {
                  "transform": "translateX(0px)",
                }
              }
            >
              <button
                aria-selected={true}
                data-css-xljr51=""
                id="example0"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 0
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example1"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 1
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example2"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 2
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example3"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 3
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example4"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 4
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="example2"
            role="tabpanel"
          >
            <div
              className="content"
            >
              Menu stuff 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots default no items 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div
          data-css-uxkdi0=""
          onKeyDown={[Function]}
          role="tablist"
          tabIndex="0"
        >
          <div
            data-css-1mwad1w=""
            style={
              Object {
                "transform": "translateX(0px)",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots default super long item 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div
          data-css-uxkdi0=""
          onKeyDown={[Function]}
          role="tablist"
          tabIndex="0"
        >
          <div
            data-css-1mwad1w=""
            style={
              Object {
                "transform": "translateX(0px)",
              }
            }
          >
            <button
              aria-selected={true}
              data-css-xljr51=""
              id={1}
              onClick={[Function]}
              role="tab"
              tabIndex="-1"
            >
              <div
                data-css-sgoz4b=""
                tabIndex="-1"
              >
                This is the song that doesn't end; yes, it goes on and on, my friend; some people started singing it, not knowing what it was; and they'll continue singing it forever just because
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
            <button
              aria-selected={false}
              data-css-vfopyy=""
              id={2}
              onClick={[Function]}
              role="tab"
              tabIndex="-1"
            >
              <div
                data-css-sgoz4b=""
                tabIndex="-1"
              >
                Short
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
            <button
              aria-selected={false}
              data-css-vfopyy=""
              id={3}
              onClick={[Function]}
              role="tab"
              tabIndex="-1"
            >
              <div
                data-css-sgoz4b=""
                tabIndex="-1"
              >
                A little less ridiculous but still long
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots scrolling 10 count 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div>
          <div
            data-css-uxkdi0=""
            onKeyDown={[Function]}
            role="tablist"
            tabIndex="0"
          >
            <div
              data-css-1mwad1w=""
              style={
                Object {
                  "transform": "translateX(0px)",
                }
              }
            >
              <button
                aria-selected={true}
                data-css-xljr51=""
                id="example0"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 0
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example1"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 1
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example2"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 2
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example3"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 3
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example4"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 4
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example5"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 5
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example6"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 6
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example7"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 7
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example8"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 8
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example9"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 9
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="example2"
            role="tabpanel"
          >
            <div
              className="content"
            >
              Menu stuff 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots scrolling 20 count 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div>
          <div
            data-css-uxkdi0=""
            onKeyDown={[Function]}
            role="tablist"
            tabIndex="0"
          >
            <div
              data-css-1mwad1w=""
              style={
                Object {
                  "transform": "translateX(0px)",
                }
              }
            >
              <button
                aria-selected={true}
                data-css-xljr51=""
                id="example0"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 0
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example1"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 1
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example2"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 2
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example3"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 3
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example4"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 4
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example5"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 5
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example6"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 6
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example7"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 7
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example8"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 8
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example9"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 9
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example10"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 10
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example11"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 11
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example12"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 12
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example13"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 13
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example14"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 14
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example15"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 15
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example16"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 16
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example17"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 17
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example18"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 18
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example19"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 19
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="example2"
            role="tabpanel"
          >
            <div
              className="content"
            >
              Menu stuff 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots scrolling 30 count 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div>
          <div
            data-css-uxkdi0=""
            onKeyDown={[Function]}
            role="tablist"
            tabIndex="0"
          >
            <div
              data-css-1mwad1w=""
              style={
                Object {
                  "transform": "translateX(0px)",
                }
              }
            >
              <button
                aria-selected={true}
                data-css-xljr51=""
                id="example0"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 0
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example1"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 1
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example2"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 2
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example3"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 3
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example4"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 4
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example5"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 5
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example6"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 6
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example7"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 7
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example8"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 8
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example9"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 9
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example10"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 10
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example11"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 11
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example12"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 12
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example13"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 13
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example14"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 14
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example15"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 15
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example16"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 16
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example17"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 17
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example18"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 18
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example19"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 19
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example20"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 20
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example21"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 21
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example22"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 22
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example23"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 23
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example24"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 24
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example25"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 25
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example26"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 26
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example27"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 27
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example28"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 28
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example29"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 29
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="example2"
            role="tabpanel"
          >
            <div
              className="content"
            >
              Menu stuff 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots scrolling 35 count 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div>
          <div
            data-css-uxkdi0=""
            onKeyDown={[Function]}
            role="tablist"
            tabIndex="0"
          >
            <div
              data-css-1mwad1w=""
              style={
                Object {
                  "transform": "translateX(0px)",
                }
              }
            >
              <button
                aria-selected={true}
                data-css-xljr51=""
                id="example0"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 0
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example1"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 1
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example2"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 2
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example3"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 3
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example4"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 4
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example5"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 5
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example6"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 6
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example7"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 7
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example8"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 8
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example9"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 9
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example10"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 10
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example11"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 11
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example12"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 12
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example13"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 13
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example14"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 14
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example15"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 15
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example16"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 16
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example17"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 17
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example18"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 18
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example19"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 19
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example20"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 20
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example21"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 21
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example22"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 22
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example23"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 23
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example24"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 24
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example25"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 25
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example26"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 26
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example27"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 27
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example28"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 28
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example29"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 29
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example30"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 30
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example31"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 31
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example32"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 32
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example33"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 33
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
              <button
                aria-selected={false}
                data-css-vfopyy=""
                id="example34"
                onClick={[Function]}
                role="tab"
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Menu 34
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="example2"
            role="tabpanel"
          >
            <div
              className="content"
            >
              Menu stuff 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots scrolling thinner container 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div
          style={
            Object {
              "outline": "1px solid red",
              "width": "50%",
            }
          }
        >
          <div>
            <div
              data-css-uxkdi0=""
              onKeyDown={[Function]}
              role="tablist"
              tabIndex="0"
            >
              <div
                data-css-1mwad1w=""
                style={
                  Object {
                    "transform": "translateX(0px)",
                  }
                }
              >
                <button
                  aria-selected={true}
                  data-css-xljr51=""
                  id="example0"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 0
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example1"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 1
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example2"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 2
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example3"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 3
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example4"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 4
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example5"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 5
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example6"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 6
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example7"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 7
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example8"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 8
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example9"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 9
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example10"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 10
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example11"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 11
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example12"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 12
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example13"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 13
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example14"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 14
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example15"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 15
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example16"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 16
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example17"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 17
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example18"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 18
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example19"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 19
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example20"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 20
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example21"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 21
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example22"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 22
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example23"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 23
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example24"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 24
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example25"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 25
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example26"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 26
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example27"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 27
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example28"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 28
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example29"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 29
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example30"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 30
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example31"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 31
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example32"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 32
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example33"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 33
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
                <button
                  aria-selected={false}
                  data-css-vfopyy=""
                  id="example34"
                  onClick={[Function]}
                  role="tab"
                  tabIndex="-1"
                >
                  <div
                    data-css-sgoz4b=""
                    tabIndex="-1"
                  >
                    Menu 34
                    <span
                      data-css-1s34vsj=""
                    />
                  </div>
                </button>
              </div>
            </div>
            <div
              aria-labelledby="example2"
              role="tabpanel"
            >
              <div
                className="content"
              >
                Menu stuff 2
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots style overrides list no borderBottom (style) 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div
          data-css-uxkdi0=""
          onKeyDown={[Function]}
          role="tablist"
          style={
            Object {
              "borderBottom": "none",
            }
          }
          tabIndex="0"
        >
          <div
            data-css-1mwad1w=""
            style={
              Object {
                "transform": "translateX(0px)",
              }
            }
          >
            <button
              aria-selected={true}
              data-css-xljr51=""
              id="wow"
              onClick={[Function]}
              role="tab"
              tabIndex="-1"
            >
              <div
                data-css-sgoz4b=""
                tabIndex="-1"
              >
                Wow
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots style overrides listItem disabled opacity (style) 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div
          data-css-uxkdi0=""
          onKeyDown={[Function]}
          role="tablist"
          tabIndex="0"
        >
          <div
            data-css-1mwad1w=""
            style={
              Object {
                "transform": "translateX(0px)",
              }
            }
          >
            <button
              aria-selected={true}
              data-css-xljr51=""
              id="wow"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "opacity": 0.5,
                }
              }
              tabIndex="-1"
            >
              <div
                data-css-sgoz4b=""
                tabIndex="-1"
              >
                Disabled look
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots style overrides panel disabled opacity (style) 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div>
          <div
            data-css-uxkdi0=""
            onKeyDown={[Function]}
            role="tablist"
            tabIndex="0"
          >
            <div
              data-css-1mwad1w=""
              style={
                Object {
                  "transform": "translateX(0px)",
                }
              }
            >
              <button
                aria-selected={true}
                data-css-xljr51=""
                id="wow"
                onClick={[Function]}
                role="tab"
                style={
                  Object {
                    "opacity": 0.5,
                  }
                }
                tabIndex="-1"
              >
                <div
                  data-css-sgoz4b=""
                  tabIndex="-1"
                >
                  Disabled look
                  <span
                    data-css-1s34vsj=""
                  />
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="wow"
            role="tabpanel"
            style={
              Object {
                "border": "1px solid red",
              }
            }
          >
            This is the content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
